# BenderPower

./: LICENSE  README.md
firmware/RP2040/: CMakeLists.txt
firmware/RP2040/lib/: CMakeLists.txt
firmware/RP2040/lib/ADS1015/: CMakeLists.txt  README.md  ads1015.cpp  ads1015.h
firmware/RP2040/lib/ADS1015/src/: ads1015.h
firmware/RP2040/lib/I2C/: CMakeLists.txt  I2C_Device.h
firmware/RP2040/lib/LED1642GW/: CMakeLists.txt  README.md  led1642gw.cpp  led1642gw.h
firmware/RP2040/lib/LM5066/: CMakeLists.txt  LM5066.cpp  LM5066.h  lm5066.cpp  lm5066.h
firmware/RP2040/lib/scheduler/: CMakeLists.txt  scheduler.h  task.h
firmware/RP2040/src/: .gitignore  CMakeLists.txt  board.h  flags.cmake  gpio_utils.h  main.cpp  main.cpp.orig  shell.cpp  shell.h  shell_cmds.cpp  shell_cmds.h  version.cmake
hardware/2023-24/: #auto_saved_files#  2023-24_Power_Supply.csv  2023-24_Power_Supply.kicad_pcb  2023-24_Power_Supply.kicad_prl  2023-24_Power_Supply.kicad_pro  2023-24_Power_Supply.kicad_sch  2023-24_Power_Supply.round-tracks-config  2023-24_Power_Supply.xml  2023-24_Power_Supply_2.kicad_pcb  aux_1.kicad_sch  aux_2.kicad_sch  aux_3.kicad_sch  aux_outputs.kicad_sch  battery_1.kicad_sch  battery_2.kicad_sch  battery_3.kicad_sch  battery_inputs.kicad_sch  fp-info-cache  fp-lib-table  freerouting.dsn  place_footprints.ini  sym-lib-table  temp-freerouting.dsn  ~2023-24_Power_Supply.kicad_sch.lck
hardware/2023-24/Power_Supply_Brain/: LED_Matrix.kicad_sch  Power_Supply_Brain.csv  Power_Supply_Brain.kicad_pcb  Power_Supply_Brain.kicad_prl  Power_Supply_Brain.kicad_pro  Power_Supply_Brain.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table
hardware/2023-24/Power_Supply_Brain/gerbers/: Power_Supply_Brain-B_Cu.gbl  Power_Supply_Brain-B_Mask.gbs  Power_Supply_Brain-B_Paste.gbp  Power_Supply_Brain-B_Silkscreen.gbo  Power_Supply_Brain-Edge_Cuts.gm1  Power_Supply_Brain-F_Cu.gtl  Power_Supply_Brain-F_Mask.gts  Power_Supply_Brain-F_Paste.gtp  Power_Supply_Brain-F_Silkscreen.gto  Power_Supply_Brain-In1_Cu.g2  Power_Supply_Brain-In2_Cu.g3  Power_Supply_Brain-NPTH-drl_map.gbr  Power_Supply_Brain-NPTH.drl  Power_Supply_Brain-PTH-drl_map.gbr  Power_Supply_Brain-PTH.drl
hardware/2023-24/Power_Supply_Brain/lib/TI/: TPSM861252.bak  TPSM861252.kicad_sym
hardware/2023-24/Power_Supply_Brain/lib/TI/TPSM861252.pretty/: RDX0007A-MFG.kicad_mod
hardware/2023-24/gerbers/: 2023-24_Power_Supply-B_Cu.gbl  2023-24_Power_Supply-B_Mask.gbs  2023-24_Power_Supply-B_Paste.gbp  2023-24_Power_Supply-B_Silkscreen.gbo  2023-24_Power_Supply-Edge_Cuts.gm1  2023-24_Power_Supply-F_Cu.gtl  2023-24_Power_Supply-F_Mask.gts  2023-24_Power_Supply-F_Paste.gtp  2023-24_Power_Supply-F_Silkscreen.gto  2023-24_Power_Supply-NPTH-drl_map.gbr  2023-24_Power_Supply-NPTH.drl  2023-24_Power_Supply-PTH-drl_map.gbr  2023-24_Power_Supply-PTH.drl
hardware/2023-24/lib/: Maxim.bak  Maxim.kicad_sym  Nexperia.bak  Nexperia.kicad_sym
hardware/2023-24/lib/CUI/: CUI.bak  CUI.kicad_sym  CUI_TBL007A-508-02BE.kicad_mod  CUI_TBL007A-508-06GY.kicad_mod  TBL007A-508-02BE.lib  TBL007A-508-06GY.lib
hardware/2023-24/lib/CUI.pretty/: CUI_TBL007A-508-02BE.kicad_mod  CUI_TBL007A-508-06GY.kicad_mod
hardware/2023-24/lib/Graphics/: Bender_Head_22x13.kicad_mod  Bender_Head_22x13.kicad_sym  Bender_Head_44x26.kicad_mod
hardware/2023-24/lib/Graphics/Graphics.pretty/: Bender_Head_22x13.kicad_mod  Bender_Head_44x26.kicad_mod
hardware/2023-24/lib/Maxim/: Maxim.bak  Maxim.kicad_sym
hardware/2023-24/lib/Maxim/Maxim.pretty/: TDFN.kicad_mod
hardware/2023-24/lib/Nexperia/: Nexperia.kicad_sym
hardware/2023-24/lib/Nexperia/Nexperia.pretty/: WLCSP-8.kicad_mod
hardware/2023-24/lib/Omron/Omron.pretty/: Relay_SPST_Omron_G9KB.kicad_mod
hardware/2023-24/lib/Regulator_Slot/: regulator_slot.bak  regulator_slot.kicad_sym
hardware/2023-24/lib/Regulator_Slot/Regulator_Slot.pretty/: 30x30_slot.kicad_mod  30x35_Slot.kicad_mod  30x40_Slot.kicad_mod  30x50_Slot.kicad_mod  50x50_board.kicad_mod  50x50_slot.kicad_mod
hardware/2023-24/lib/TI/: TI.Library.bak  TI.Library.kicad_sym
hardware/2023-24/lib/TI/TI.pretty/: HTSSOP-28.kicad_mod
